--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,10 @@
 ---
 exp:
   name: "arcface"
-  experiment_dir: "/data/arcface/"
+  experiment_dir: "/exps/arcface/"
 data:
-  train_faces_path: "/datasets/faces/train/*"
-  valid_faces_path: "/datasets/faces/test/*"
+  train_faces_path: "/data/arcface/train_sample/*/*"
+  valid_faces_path: "/data/arcface/valid_sample/cfp-dataset/Data/Images/*/*"
   img_size: 112
   img_channels: 3
   n_workers: 2
