--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ exp:
   experiment_dir: "/exps/arcface/"
 data:
   train_faces_path: "/data/arcface/train_sample/*/*"
-  valid_faces_path: "/data/arcface/valid_sample/cfp-dataset/Data/Images/*/*"
+  valid_faces_path: "/data/arcface/valid_sample/cfp-dataset/Data/Images/*/*/*"
   img_size: 112
   img_channels: 3
   n_workers: 2
@@ -20,9 +20,10 @@ model:
     clipnorm: 0
 trainer:
   num_epochs: 11000
-  batch_size: 10
+  train_batch_size: 32
+  valid_batch_size: 10
   use_lr_decay: false
-  save_checkpoint_freq: 10
+  save_checkpoint_freq: 2
   keep_checkpoint_freq: 50
   valid_freq: 10
   n_gpus: 1
