--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,11 @@
 ---
 exp:
-  name: "arcface"
+  name: "arcface_proper_normalization"
   experiment_dir: "/exps"
 data:
   train_faces_path: "/data/celeba_data/celeba_cropped/*/*"
   valid_faces_path: "/data/cfp-dataset/Data/Images/*/*/*"
+  test_faces_path: "/data/test/*/*"
   img_size: 112
   img_channels: 3
   n_workers: 2
@@ -20,7 +21,7 @@ model:
     clipnorm: 0
 trainer:
   num_epochs: 11000
-  train_batch_size: 40
+  train_batch_size: 16
   valid_batch_size: 10
   use_lr_decay: false
   save_checkpoint_freq: 2
